<resources>
    <string name="app_name">Elemental</string>
    <string name="the_elementals_inc">The Elementals Inc.</string>
    <string name="todo">todo</string>
    <string name="enter_your_phone">Enter Your Contact Number!</string>
    <string name="letverify">Let \'s Get you verified</string>
    <string name="factory_sup_tm_sup">Factory</string>
    <string name="verify_continue"><![CDATA[Verify & Continue]]></string>
    <string name="get_your_factory_automated_in_7_steps_n_diagnose_sensors_and_temperature">Get your Factory Automated in 7 steps \n Diagnose Sensors and Temperature</string>
    <string name="proceed">Proceed</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_otp">Verify OTP ?</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="users_details">Users Details</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_Height">Enter Your Height</string>
    <string name="enter_your_Weight">Enter Your Weight</string>
    <string name="enter_your_DOB">Enter Your D.O.B</string>
    <string-array name="gender">
        <item>Choose Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>