<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#008294"
    tools:context=".UsersDetails">

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="91dp"
        android:background="@drawable/buttonbg"
        android:ems="10"
        android:hint="@string/enter_your_Height"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="91dp"
        android:background="@drawable/buttonbg"
        android:ems="10"
        android:hint="@string/enter_your_Weight"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="91dp"
        android:background="@drawable/buttonbg"
        android:ems="10"
        android:hint="@string/enter_your_DOB"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/cedarville_cursive"
        android:text="@string/factory_sup_tm_sup"
        android:textAlignment="center"
        android:textColor="#F8F5F5"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView

        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/users_details"
        android:textAlignment="center"
        android:textColor="#F8F8F8"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="91dp"
        android:background="@drawable/buttonbg"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Spinner
        android:textAlignment="center"
        android:id="@+id/genderSpinner"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/buttonbg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="201dp"
        android:layout_height="187dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:srcCompat="@drawable/male2_removebg_preview" />
</androidx.constraintlayout.widget.ConstraintLayout>